--- a/css_backup.css
+++ b/css_backup.css
@@ -1,42 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<title>Page Title</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-/* Style the body */
-body {
-  font-family: Arial;
-  margin: 0;
-}
-
-/* Header/Logo Title */
-.header {
-  padding: 60px;
-  text-align: center;
-  background: #1abc9c;
-  color: white;
-  font-size: 30px;
-}
-
-/* Page Content */
-.content {padding:20px;}
-</style>
-</head>
-<body>
-
-<div class="header">
-  <h1>Header</h1>
-  <p>My supercool header</p>
-</div>
-
-<div class="content">
-  <h1>Content</h1>
-  <p>Some content blablabla, some content blablabla.</p>
-  <p>Some content blablabla, some content blablabla.</p>
-  <p>Some content blablabla, some content blablabla.</p>
-</div>
-
-</body>
-</html>
+    <style>        
+        #header {
+            background-color:black;
+            color:white;
+            text-align:center;
+            padding:5px;            
+        }
+        
+        #nav {
+            line-height:30px;
+            background-color:#eeeeee;
+            height:300px;
+            width:100px;
+            float:left;
+            padding:5px;    
+        }
+        
+        #footer {
+            background-color:black;
+            color:white;
+            clear:both;
+            text-align:center;
+            padding:5px;
+        }
+    </style>
